--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.17",
+    "firebase": "^10.8.0",
     "next": "latest",
+    "postcss": "^8.4.35",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
     "node": ">=18"
